fix(style): Adjust timeline date positioning on mobile

--- a/src/styles/pages/experience.scss
+++ b/src/styles/pages/experience.scss
@@ -117,10 +117,10 @@
       top: 27% !important;
     }
     > div:nth-child(3) > div > div.timeline-date {
-      top: 52% !important;
+      top: 54% !important;
     }
     > div:nth-child(4) > div > div.timeline-date {
-      top: 77% !important;
+      top: 79% !important;
     }
   }
 
